<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ontime.fragments.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_project"
        android:name="com.example.ontime.fragments.ui.project.ProjectFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_project" />

    <fragment
        android:id="@+id/nav_graph"
        android:name="com.example.ontime.fragments.ui.graph.GraphFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_graph" />
</navigation>