<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ui.addProject.AddProjectFragment">

        <LinearLayout
            android:id="@+id/linearlayout_loginInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/Margin10"
                android:gravity="center"
                android:text="@string/add_project"
                android:textSize="@dimen/Heading"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_viewer"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/Margin20">

                <Button
                    android:id="@+id/btn_startDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="83dp"
                    android:hint="@string/start_date" />

                <Button
                    android:id="@+id/btn_endDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:hint="@string/end_date" />

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_add_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/TextInputLayoutWidth"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/project_name"
                app:errorEnabled="true"
                app:startIconContentDescription="Person Icon"
                app:startIconDrawable="@drawable/ic_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/Margin10"
                    android:inputType="text"
                    android:paddingStart="@dimen/Padding10"
                    android:paddingEnd="@dimen/Padding10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_add_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/TextInputLayoutWidth"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/project_description"
                app:errorEnabled="true"
                app:startIconContentDescription="Person Icon"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/Margin10"
                    android:inputType="text"
                    android:maxLines="5"
                    android:paddingStart="@dimen/Padding10"
                    android:paddingEnd="@dimen/Padding10"
                    android:scrollbars="vertical" />

            </com.google.android.material.textfield.TextInputLayout>

            <SeekBar
                android:id="@+id/add_min_time_seekbar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="false"
                android:min="1"
                android:max="24"
                android:progress="1" />

            <TextView
                android:id="@+id/add_min_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/Margin20"
                android:text="@string/min_time"
                android:textSize="20sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/add_max_time_seekbar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="false"
                android:min="2"
                android:max="24"
                android:progress="2" />

            <TextView
                android:id="@+id/add_max_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/Margin20"
                android:text="@string/max_time"
                android:textSize="20sp"
                android:textStyle="bold" />


            <Button
                android:layout_width="@dimen/ConfirmBtnWidth"
                android:layout_height="@dimen/ConfirmBtnHeight"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/Margin10"
                android:hint="@string/capture"
                android:paddingStart="@dimen/Padding10"
                android:paddingEnd="@dimen/Padding10" />

        </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_image_fab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_camera"
        android:focusable="true"
        android:layout_gravity="bottom|end"
        android:contentDescription="TODO" />
</FrameLayout>