<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/border"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:clickable="true"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/project_image"
        android:layout_width="146dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/user_pic"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:scaleType="fitStart"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="45dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/user_name"
            android:textSize="30sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/project_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"
            android:text="@string/user_gmail_com" />

        <TextView
            android:id="@+id/project_timeline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:text="16/05/22-16/06/22" />


    </LinearLayout>


</FrameLayout>