<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logobanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo"
        app:shapeAppearanceOverlay="@style/logoImageLogin"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:id="@+id/linearlayout_loginInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/logobanner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_email"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:background="@drawable/bkg_signup_txt"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_new_password"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_password"
            android:background="@drawable/bkg_signup_txt"/>

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:hint="@string/forgot_password"
            android:background="@drawable/bkg_forgot_btn"
            />

    </LinearLayout>



</RelativeLayout>