<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ui.addTimeSheet.AddTimeSheetFragment">

    <LinearLayout
        android:id="@+id/linearlayout_loginInfo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img_viewer"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/calendarView"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_add_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/TextInputLayoutWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/project_description"
            app:errorEnabled="true"
            app:startIconContentDescription="Person Icon"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/Margin10"
                android:inputType="text"
                android:maxLines="5"
                android:paddingStart="@dimen/Padding10"
                android:paddingEnd="@dimen/Padding10"
                android:scrollbars="vertical" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:hint="@string/category">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <SeekBar
            android:id="@+id/add_max_time_seekbar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:min="2"
            android:max="24"
            android:progress="2" />

        <TextView
            android:id="@+id/add_max_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/Margin20"
            android:text="@string/time_spent"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:layout_width="@dimen/ConfirmBtnWidth"
            android:layout_height="@dimen/ConfirmBtnHeight"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/Margin10"
            android:hint="@string/capture"
            android:paddingStart="@dimen/Padding10"
            android:paddingEnd="@dimen/Padding10" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_image_fab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_camera"
        android:focusable="true"
        android:layout_gravity="bottom|end"
        android:contentDescription="TODO" />

</FrameLayout>